--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -12,17 +12,17 @@
     <!--客户端版本号 每次客户端打包增加-->
     <add key="ClientVersionCode" value="1.0.45" />
     <!--服务端版本号 每次客户端增加服务端也修改 -->
-    <add key="ServerVersionCode" value="1.0.21" />
+    <add key="ServerVersionCode" value="1.0.25" />
     <!--自动启动服务 0:启动 1:不启动-->
     <add key="AutoStartServer" value="0" />
     <!--自动连接定位引擎-->
     <add key="AutoConnectEngine" value="True" />
-    <!--本地IP(连接定位引擎)-->
-    <add key="Ip" value="172.16.100.26" />
+    <!--本地IP(连接定位引擎) 宝信：192.168.1.100-->
+    <add key="Ip" value="192.168.1.100" />
     <!--定位引擎IP(连接定位引擎)-->
-    <add key="EngineIp" value="172.16.100.25" />
-    <!--三维更新安装包路径 172.16.100.26-->
-    <add key="LocationPackageURL" value="http://172.16.100.26/Exe/LocationSystem.exe" />
+    <add key="EngineIp" value="192.168.1.100" />
+    <!--三维更新安装包路径-->
+    <add key="LocationPackageURL" value="http://192.168.108.109/Exe/LocationSystem.exe" />
     <!--基础平台对接(WebApi)的IP 测试用ipms-demo.datacase.io，正式用172.16.100.22，本地模拟用 simulate -->
     <add key="DatacaseWebApiUrl" value="172.16.100.22" />
     <!--url的最大长度限制，获取sis数据是参数是放在url里面的，要分批发送-->
@@ -40,14 +40,14 @@
     <!--显示数据库语句 0:不显示 1:显示-->
     <add key="ShowSqlLog" value="0" />
     <!--厂区名称（根结点名称）四会热电厂/宝钢园区 -->
-    <add key="ParkName" value="四会热电厂" />
+    <add key="ParkName" value="宝钢园区" />
     <!--初始化拓扑结点时位置偏移，宝钢项目时和品铂直接的原点差距,四会 0,0, 宝钢 (+86.4517,-3.048) -->
-    <add key="InitTopoOffset" value="0,0" />
+    <add key="InitTopoOffset" value="86.4517,-3.048" />
     <!--初始化拓扑结点时坐标单位切换，我们里面用m，要换算成厘米的话*100，四会 1，宝钢 100，改动太多了，先不动 -->
     <add key="InitTopoPower" value="1" />
 
     <!--坐标系偏移量-->
-    <add key="LocationOffset" value="2059,1565" />
+    <add key="LocationOffset" value="0,0" />
     <add key="WritePositionLog" value="False" />
     <!--WCFHost 对于WebApi和WCF可以直接用localhost ，但是对于HttpListener要用具体的本机IP-->
     <add key="Host" value="localhost" />
@@ -99,7 +99,7 @@
     <add key="NVRPass" value="1111add" />
 
     <!--是否启动守护进程-->
-    <add key="StartDaemon" value="False" />
+    <add key="StartDaemon" value="True" />
     <!--只能有一个守护进程程序-->
     <add key="OnlyOneDaemon" value="True" />
     <!--守护进程程序名-->
@@ -111,9 +111,9 @@
 
     <!--部分功能的启用和关闭-->
     <!--设备告警对接服务 WebNSQLib(用于四会电厂)-->
-    <add key="EnableAlarmRecieve" value="True" />
+    <add key="EnableAlarmRecieve" value="False" />
     <!--获取移动巡检数据（用于四会电厂）-->
-    <add key="EnableInspectionTrack" value="True" />
+    <add key="EnableInspectionTrack" value="False" />
     
     <!--定位历史数据缓存到内存中-->
     <add key="EnableHistoryBuffer" value="True" />
