--- a/Server/WCFServer/LocationWCF/AppConfig（四会）/App.config
+++ b/Server/WCFServer/LocationWCF/AppConfig（四会）/App.config
@@ -10,9 +10,9 @@
   </startup>
   <appSettings>
     <!--客户端版本号 每次客户端打包增加-->
-    <add key="ClientVersionCode" value="1.0.44" />
+    <add key="ClientVersionCode" value="1.0.45" />
     <!--服务端版本号 每次客户端增加服务端也修改 -->
-    <add key="ServerVersionCode" value="1.0.20" />
+    <add key="ServerVersionCode" value="1.0.21" />
     <!--自动启动服务 0:启动 1:不启动-->
     <add key="AutoStartServer" value="0" />
     <!--自动连接定位引擎-->
@@ -32,14 +32,13 @@
     <add key="NsqLookupdUrl" value="172.16.100.22:4161" />
     <add key="NsqLookupdTopic" value="honeywell" />
     <add key="NsqLookupdChannel" value="channel-name" />
-
+    
     <!--数据初始化方式 -1:不初始化,0:EF,1:Sql-->
     <add key="DataInitMode" value="-1" />
     <!--数据库来源 0:SqlServer 1:SQLite 2:MySql-->
     <add key="DbSourceType" value="MySql" />
     <!--显示数据库语句 0:不显示 1:显示-->
     <add key="ShowSqlLog" value="0" />
-
     <!--厂区名称（根结点名称）四会热电厂/宝钢园区 -->
     <add key="ParkName" value="四会热电厂" />
     <!--初始化拓扑结点时位置偏移，宝钢项目时和品铂直接的原点差距,四会 0,0, 宝钢 (+86.4517,-3.048) -->
@@ -57,9 +56,9 @@
     <add key="User" value="Admin" />
     <add key="Password" value="Admin@123456" />
     <!--人员运动状态发生变化的时间间隔(s),5s以上则静止-->
-    <add key="PositionMoveStateWaitTime" value="5" />
+    <add key="PositionMoveStateWaitTime" value="20" />
     <!--人员运动状态发生变化的时间间隔(s),60s以上则离线-->
-    <add key="PositionMoveStateOfflineTime" value="86400" />
+    <add key="PositionMoveStateOfflineTime" value="3600" />
     <!--定位卡低电告警标志位-->
     <add key="LowPowerFlag" value="370" />
     <!--显示未在定位区域的位置点-->
@@ -90,7 +89,7 @@
     <add key="CameraAlarmKeepDay" value="120"/>
     <!--删除告警时是否保存图片 True:保存图片，恢复时有用 False:彻底删除图片-->
     <add key="DeleteAlarmKeepPictureFile" value="True"/>
-
+    
     <!--NVSPlayer-->
     <add key="EnabelNVS" value="False" />
     <add key="RTMP_Host" value="192.168.108.109" />
@@ -115,13 +114,22 @@
     <add key="EnableAlarmRecieve" value="True" />
     <!--获取移动巡检数据（用于四会电厂）-->
     <add key="EnableInspectionTrack" value="True" />
-
+    
     <!--定位历史数据缓存到内存中-->
     <add key="EnableHistoryBuffer" value="True" />
     <!--线程插入定位数据到历史表中的时间间隔 (s)-->
     <add key="AddHisPositionInterval" value="10" />
+    <!--定位引擎发送心跳包的时间间隔 (ms)-->
+    <add key="PosEngineKeepAliveInterval" value="5000" />
+    
     <!--设备告警保存天数-->
-    <add key="AlarmRemoveDays" value="30"/>
+    <add key="DevAlarmKeepDays" value="90"/>
+
+    <!--记录定位信息-->
+    <add key="LogPostionRawInfo" value="True"/>
+    <!--记录Web通信信息-->
+    <add key="LogCommunictionInfo" value="True"/>
+
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebLocation-20180528021530.mdf;Initial Catalog=aspnet-WebLocation-20180528021530;Integrated Security=True" providerName="System.Data.SqlClient" />
