--- a/Server/WCFServer/LocationWCF/AppConfig（宝信）/App.config
+++ b/Server/WCFServer/LocationWCF/AppConfig（宝信）/App.config
@@ -10,9 +10,9 @@
   </startup>
   <appSettings>
     <!--客户端版本号 每次客户端打包增加-->
-    <add key="ClientVersionCode" value="1.0.40" />
+    <add key="ClientVersionCode" value="1.0.45" />
     <!--服务端版本号 每次客户端增加服务端也修改 -->
-    <add key="ServerVersionCode" value="1.0.13" />
+    <add key="ServerVersionCode" value="1.0.21" />
     <!--自动启动服务 0:启动 1:不启动-->
     <add key="AutoStartServer" value="0" />
     <!--自动连接定位引擎-->
@@ -56,9 +56,9 @@
     <add key="User" value="Admin" />
     <add key="Password" value="Admin@123456" />
     <!--人员运动状态发生变化的时间间隔(s),5s以上则静止-->
-    <add key="PositionMoveStateWaitTime" value="5" />
+    <add key="PositionMoveStateWaitTime" value="20" />
     <!--人员运动状态发生变化的时间间隔(s),60s以上则离线-->
-    <add key="PositionMoveStateOfflineTime" value="60" />
+    <add key="PositionMoveStateOfflineTime" value="3600" />
     <!--定位卡低电告警标志位-->
     <add key="LowPowerFlag" value="370" />
     <!--显示未在定位区域的位置点-->
@@ -73,12 +73,25 @@
     <add key="MaxConcurrentSessions" value="4000" />
     <add key="MaxConcurrentInstances" value="4000" />
 
+    <!--极视角火警和安全帽对接（用于宝信）-->
+    <add key="EnableVisionListener" value="False"/>
     <!--极视角告警监听端口 192.168.1.100  8736-->    
     <add key="ExtremeVisionListenerPort" value="8736" />
     <add key="ExtremeVisionListenerIP" value="192.168.1.100" />
+    <!--视频对接告警的图片存放方式 0:存在数据库Picture表中 1.已图片方式存在服务端文件夹中-->
+    <add key="CameraAlarmPicSaveMode" value="1"/>
+    <!--视频对接告警的图片保存为止 
+    考虑到多个服务端版本同时存在，文件夹名称可能修改，该目录基于服务端程序所在的分区
+    程序在D盘，CameraAlarmPic，想到于是 D:\CameraAlarmPic。LocationSystem\CameraAlarmPic相当于是D:\LocationSystem\CameraAlarmPic
+    -->
+    <add key="CameraAlarmPicSaveDir" value="LocationSystem\CameraAlarmPic"/>
+    <!--视频告警保存时间 (天) 0:无限制,不启动线程-->
+    <add key="CameraAlarmKeepDay" value="120"/>
+    <!--删除告警时是否保存图片 True:保存图片，恢复时有用 False:彻底删除图片-->
+    <add key="DeleteAlarmKeepPictureFile" value="True"/>
 
     <!--NVSPlayer-->
-    <add key="EnabelNVS" value="True" />
+    <add key="EnabelNVS" value="False" />
     <add key="RTMP_Host" value="192.168.108.109" />
     <add key="NVRIP" value="192.168.108.107" />
     <add key="NVRPort" value="3000" />
@@ -101,16 +114,21 @@
     <add key="EnableAlarmRecieve" value="False" />
     <!--获取移动巡检数据（用于四会电厂）-->
     <add key="EnableInspectionTrack" value="False" />
-    <!--极视角火警和安全帽对接（用于宝信）-->
-    <add key="EnableVisionListener" value="True"/>
-
-    <!--视频对接告警的图片存放方式 1:存在数据库Picture表中 2.已图片方式存在服务端文件夹中-->
-    <add key="CameraAlarmPicSaveMode" value="1"/>
-
+    
     <!--定位历史数据缓存到内存中-->
     <add key="EnableHistoryBuffer" value="True" />
     <!--线程插入定位数据到历史表中的时间间隔 (s)-->
     <add key="AddHisPositionInterval" value="10" />
+    <!--定位引擎发送心跳包的时间间隔 (ms)-->
+    <add key="PosEngineKeepAliveInterval" value="5000" />
+    
+    <!--设备告警保存天数-->
+    <add key="DevAlarmKeepDays" value="90"/>
+
+    <!--记录定位信息-->
+    <add key="LogPostionRawInfo" value="True"/>
+    <!--记录Web通信信息-->
+    <add key="LogCommunictionInfo" value="True"/>
 
   </appSettings>
   <connectionStrings>
