--- a/Server/WCFServer/LocationWCF/LocationServer.exe.config
+++ b/Server/WCFServer/LocationWCF/LocationServer.exe.config
@@ -12,7 +12,7 @@
     <!--客户端版本号 每次客户端打包增加-->
     <add key="ClientVersionCode" value="1.0.45" />
     <!--服务端版本号 每次客户端增加服务端也修改 -->
-    <add key="ServerVersionCode" value="1.0.25" />
+    <add key="ServerVersionCode" value="1.0.24" />
     <!--自动启动服务 0:启动 1:不启动-->
     <add key="AutoStartServer" value="0" />
     <!--自动连接定位引擎-->
@@ -27,12 +27,10 @@
     <add key="DatacaseWebApiUrl" value="172.16.100.22" />
     <!--url的最大长度限制，获取sis数据是参数是放在url里面的，要分批发送-->
     <add key="UrlMaxLength" value="200" />
-
     <!--NSQ配置信息-->
     <add key="NsqLookupdUrl" value="172.16.100.22:4161" />
     <add key="NsqLookupdTopic" value="honeywell" />
     <add key="NsqLookupdChannel" value="channel-name" />
-    
     <!--数据初始化方式 -1:不初始化,0:EF,1:Sql-->
     <add key="DataInitMode" value="-1" />
     <!--数据库来源 0:SqlServer 1:SQLite 2:MySql-->
@@ -45,7 +43,6 @@
     <add key="InitTopoOffset" value="86.4517,-3.048" />
     <!--初始化拓扑结点时坐标单位切换，我们里面用m，要换算成厘米的话*100，四会 1，宝钢 100，改动太多了，先不动 -->
     <add key="InitTopoPower" value="1" />
-
     <!--坐标系偏移量-->
     <add key="LocationOffset" value="0,0" />
     <add key="WritePositionLog" value="False" />
@@ -56,40 +53,36 @@
     <add key="User" value="Admin" />
     <add key="Password" value="Admin@123456" />
     <!--人员运动状态发生变化的时间间隔(s),5s以上则静止-->
-    <add key="PositionMoveStateWaitTime" value="20" />
+    <add key="PositionMoveStateWaitTime" value="5" />
     <!--人员运动状态发生变化的时间间隔(s),60s以上则离线-->
-    <add key="PositionMoveStateOfflineTime" value="3600" />
+    <add key="PositionMoveStateOfflineTime" value="60" />
     <!--定位卡低电告警标志位-->
     <add key="LowPowerFlag" value="370" />
     <!--显示未在定位区域的位置点-->
     <add key="ShowUnLocatedAreaPoint" value="false" />
-
     <add key="LocationCard" value="300" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
     <add key="CardRoleId" value="3" />
-
     <!--WCF线程数设置-->
     <add key="MaxConcurrentCalls" value="4000" />
     <add key="MaxConcurrentSessions" value="4000" />
     <add key="MaxConcurrentInstances" value="4000" />
-
     <!--极视角火警和安全帽对接（用于宝信）-->
-    <add key="EnableVisionListener" value="False"/>
-    <!--极视角告警监听端口 192.168.1.100  8736-->    
+    <add key="EnableVisionListener" value="True" />
+    <!--极视角告警监听端口 192.168.1.100  8736-->
     <add key="ExtremeVisionListenerPort" value="8736" />
     <add key="ExtremeVisionListenerIP" value="192.168.1.100" />
     <!--视频对接告警的图片存放方式 0:存在数据库Picture表中 1.已图片方式存在服务端文件夹中-->
-    <add key="CameraAlarmPicSaveMode" value="1"/>
+    <add key="CameraAlarmPicSaveMode" value="1" />
     <!--视频对接告警的图片保存为止 
     考虑到多个服务端版本同时存在，文件夹名称可能修改，该目录基于服务端程序所在的分区
     程序在D盘，CameraAlarmPic，想到于是 D:\CameraAlarmPic。LocationSystem\CameraAlarmPic相当于是D:\LocationSystem\CameraAlarmPic
     -->
-    <add key="CameraAlarmPicSaveDir" value="LocationSystem\CameraAlarmPic"/>
+    <add key="CameraAlarmPicSaveDir" value="LocationSystem\CameraAlarmPic" />
     <!--视频告警保存时间 (天) 0:无限制,不启动线程-->
-    <add key="CameraAlarmKeepDay" value="120"/>
+    <add key="CameraAlarmKeepDay" value="120" />
     <!--删除告警时是否保存图片 True:保存图片，恢复时有用 False:彻底删除图片-->
-    <add key="DeleteAlarmKeepPictureFile" value="True"/>
-    
+    <add key="DeleteAlarmKeepPictureFile" value="True" />
     <!--NVSPlayer-->
     <add key="EnabelNVS" value="False" />
     <add key="RTMP_Host" value="192.168.108.109" />
@@ -97,7 +90,6 @@
     <add key="NVRPort" value="3000" />
     <add key="NVRUser" value="Admin" />
     <add key="NVRPass" value="1111add" />
-
     <!--是否启动守护进程-->
     <add key="StartDaemon" value="True" />
     <!--只能有一个守护进程程序-->
@@ -108,31 +100,17 @@
     <add key="DaemonPath" value="LocationDaemon.exe" />
     <!--自动注册开机自启动 True的话，每次启动都会注册一下，因为有多个版本服务端存在，不然要每次都手动操作一下-->
     <add key="RegisterDaemonAutoRun" value="True" />
-
     <!--部分功能的启用和关闭-->
     <!--设备告警对接服务 WebNSQLib(用于四会电厂)-->
     <add key="EnableAlarmRecieve" value="False" />
     <!--获取移动巡检数据（用于四会电厂）-->
     <add key="EnableInspectionTrack" value="False" />
-    
     <!--定位历史数据缓存到内存中-->
     <add key="EnableHistoryBuffer" value="True" />
     <!--线程插入定位数据到历史表中的时间间隔 (s)-->
     <add key="AddHisPositionInterval" value="10" />
-    <!--定位引擎发送心跳包的时间间隔 (ms)-->
-    <add key="PosEngineKeepAliveInterval" value="5000" />
-    
     <!--设备告警保存天数-->
-    <add key="DevAlarmKeepDays" value="90"/>
-
-    <!--记录定位信息-->
-    <add key="LogPostionRawInfo" value="True"/>
-    <!--记录Web通信信息-->
-    <add key="LogCommunictionInfo" value="True"/>
-    
-    <!--是否将设备告警提取到内存中-->
-    <add key="EnableDevAlarmBuffer" value="False" />
-  
+    <add key="AlarmRemoveDays" value="30" />
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebLocation-20180528021530.mdf;Initial Catalog=aspnet-WebLocation-20180528021530;Integrated Security=True" providerName="System.Data.SqlClient" />
@@ -203,7 +181,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
       <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
       <provider invariantName="System.Data.SQLite" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
-    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider></providers>
+      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider>
+    </providers>
   </entityFramework>
   <log4net>
     <!-- OFF, FATAL, ERROR, WARN, INFO, DEBUG, ALL -->
@@ -257,6 +236,14 @@
   </log4net>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Extensions" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.29.0" newVersion="2.2.29.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.29.0" newVersion="4.2.29.0" />
+      </dependentAssembly>
       <probing privatePath="Assemblies;Assemblies/System;Assemblies/Microsoft;Assemblies/SQLite;Assemblies/NOPI" />
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
@@ -282,7 +269,9 @@
       <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
       <remove invariant="System.Data.SQLite" />
       <add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
-    <remove invariant="MySql.Data.MySqlClient" /><add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" /></DbProviderFactories>
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </DbProviderFactories>
   </system.data>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
