--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -74,7 +74,7 @@
     <add key="MaxConcurrentInstances" value="4000" />
 
     <!--极视角火警和安全帽对接（用于宝信）-->
-    <add key="EnableVisionListener" value="False"/>
+    <add key="EnableVisionListener" value="True"/>
     <!--极视角告警监听端口 192.168.1.100  8736-->    
     <add key="ExtremeVisionListenerPort" value="8736" />
     <add key="ExtremeVisionListenerIP" value="192.168.1.100" />
@@ -91,7 +91,7 @@
     <add key="DeleteAlarmKeepPictureFile" value="True"/>
     
     <!--NVSPlayer-->
-    <add key="EnabelNVS" value="False" />
+    <add key="EnabelNVS" value="True" />
     <add key="RTMP_Host" value="192.168.108.109" />
     <add key="NVRIP" value="192.168.108.107" />
     <add key="NVRPort" value="3000" />
@@ -131,7 +131,7 @@
     <add key="LogCommunictionInfo" value="True"/>
     
     <!--是否将设备告警提取到内存中-->
-    <add key="EnableDevAlarmBuffer" value="False" />
+    <add key="EnableDevAlarmBuffer" value="True" />
   
   </appSettings>
   <connectionStrings>
