增加稳定性

--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -10,9 +10,9 @@
   </startup>
   <appSettings>
     <!--客户端版本号 每次客户端打包增加-->
-    <add key="ClientVersionCode" value="1.0.45" />
+    <add key="ClientVersionCode" value="1.0.46" />
     <!--服务端版本号 每次客户端增加服务端也修改 -->
-    <add key="ServerVersionCode" value="1.0.25" />
+    <add key="ServerVersionCode" value="1.0.26" />
     <!--自动启动服务 0:启动 1:不启动-->
     <add key="AutoStartServer" value="0" />
     <!--自动连接定位引擎-->
@@ -132,6 +132,9 @@
     
     <!--是否将设备告警提取到内存中-->
     <add key="EnableDevAlarmBuffer" value="True" />
+
+    <!--日志显示最大字符串长度-->
+    <add key="LogTextBoxMaxLength" value="10000" />
   
   </appSettings>
   <connectionStrings>
