--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -18,9 +18,9 @@
     <!--自动连接定位引擎-->
     <add key="AutoConnectEngine" value="True" />
     <!--本地IP(连接定位引擎) 宝信：192.168.1.100-->
-    <add key="Ip" value="192.168.1.100" />
+    <add key="Ip" value="127.0.0.1" />
     <!--定位引擎IP(连接定位引擎)-->
-    <add key="EngineIp" value="192.168.1.100" />
+    <add key="EngineIp" value="127.0.0.1" />
     <!--三维更新安装包路径-->
     <add key="LocationPackageURL" value="http://192.168.108.109/Exe/LocationSystem.exe" />
     <!--基础平台对接(WebApi)的IP 测试用ipms-demo.datacase.io，正式用172.16.100.22，本地模拟用 simulate -->
@@ -56,9 +56,9 @@
     <add key="User" value="Admin" />
     <add key="Password" value="Admin@123456" />
     <!--人员运动状态发生变化的时间间隔(s),5s以上则静止-->
-    <add key="PositionMoveStateWaitTime" value="20" />
+    <add key="PositionMoveStateWaitTime" value="5" />
     <!--人员运动状态发生变化的时间间隔(s),60s以上则离线-->
-    <add key="PositionMoveStateOfflineTime" value="120" />
+    <add key="PositionMoveStateOfflineTime" value="600" />
     <!--定位卡低电告警标志位-->
     <add key="LowPowerFlag" value="370" />
     <!--显示未在定位区域的位置点-->
@@ -91,7 +91,7 @@
     <add key="DeleteAlarmKeepPictureFile" value="True"/>
     
     <!--NVSPlayer-->
-    <add key="EnabelNVS" value="True" />
+    <add key="EnabelNVS" value="False" />
     <add key="RTMP_Host" value="192.168.108.109" />
     <add key="NVRIP" value="192.168.108.107" />
     <add key="NVRPort" value="3000" />
@@ -99,7 +99,7 @@
     <add key="NVRPass" value="1111add" />
 
     <!--是否启动守护进程-->
-    <add key="StartDaemon" value="True" />
+    <add key="StartDaemon" value="False" />
     <!--只能有一个守护进程程序-->
     <add key="OnlyOneDaemon" value="True" />
     <!--守护进程程序名-->
@@ -134,7 +134,10 @@
     <add key="EnableDevAlarmBuffer" value="True" />
 
     <!--日志显示最大字符串长度-->
-    <add key="LogTextBoxMaxLength" value="10000" />
+    <add key="LogTextBoxMaxLength" value="1000" />
+    
+   <!--移动的最大速度，超过这个速度，作为错误点。0则不排除错误点-->
+    <add key="MoveMaxSpeed" value="20" />
   
   </appSettings>
   <connectionStrings>
