--- a/Server/WebSite/LocationWeb/Location.WebSite.csproj
+++ b/Server/WebSite/LocationWeb/Location.WebSite.csproj
@@ -366,6 +366,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Microsoft\AspNet\Identity\Owin\SignInManager.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -513,6 +514,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Img\BaoXin\BaoXinHomePage.jpg" />
+    <Content Include="Img\BaoXin\BaoXinLogo.ico" />
+    <Content Include="Img\BaoXin\BaoXinLogo.png" />
     <Content Include="Img\MapPic\LoginIcon.png" />
     <Content Include="Img\MapPic\PowerPlant.png" />
     <Content Include="Img\MapPic\LoginPic.jpg" />
