--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -121,8 +121,14 @@
     <add key="EnableDevAlarmBuffer" value="True" />
     <!--日志显示最大字符串长度-->
     <add key="LogTextBoxMaxLength" value="10000" />
-    <!--移动的最大速度，超过这个速度，作为错误点。0则不排除错误点-->
+    <!--移动的最大速度，超过这个速度，作为错误点,20是2m。0则不排除错误点-->
+    
     <add key="MoveMaxSpeed" value="20" />
+    <!--启动时清理一些当天的数据-->
+    <add key="FilterTodayWhenStart" value="True" />
+    <!--定时删除超过该速度的（错误）点-->
+    <add key="FilterMoreThanMaxSpeedInterval" value="3600" />
+  
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebLocation-20180528021530.mdf;Initial Catalog=aspnet-WebLocation-20180528021530;Integrated Security=True" providerName="System.Data.SqlClient" />
