--- a/LocationDaemon/App.config
+++ b/LocationDaemon/App.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
@@ -41,4 +45,54 @@
     <add key="MaxMemorySize" value="8192"/>
 
   </appSettings>
+  <log4net>
+    <!-- OFF, FATAL, ERROR, WARN, INFO, DEBUG, ALL -->
+    <!-- Set root logger level to ERROR and its appenders -->
+    <!--<root>
+      <level value="ALL" />
+    </root>-->
+    <!-- Print only messages of level DEBUG or above in the packages -->
+    <logger name="Logger">
+      <level value="ALL" />
+    </logger>
+    <appender name="SysAppender" type="log4net.Appender.RollingFileAppender,log4net">
+      <param name="File" value="DaemonLogs/" />
+      <!--文件存放位置D:/App_Data，默认输出目录-->
+      <param name="Encoding" value="utf-8" />
+      <param name="AppendToFile" value="true" />
+      <param name="RollingStyle" value="Date" />
+      <param name="DatePattern" value="&quot;Logs_&quot;yyyyMMdd&quot;.txt&quot;" />
+      <!--标题名字-->
+      <param name="StaticLogFileName" value="false" />
+      <layout type="log4net.Layout.PatternLayout,log4net">
+        <param name="ConversionPattern" value="%d [%t] %-5p %c - %m%n" />
+      </layout>
+    </appender>
+    <appender name="consoleApp" type="log4net.Appender.ConsoleAppender,log4net">
+      <layout type="log4net.Layout.PatternLayout,log4net">
+        <param name="ConversionPattern" value="%d [%t] %-5p %c - %m%n" />
+      </layout>
+    </appender>
+    <appender name="UdpAppender" type="log4net.Appender.UdpAppender">
+      <!--UDP 绑定的端口-->
+      <localPort value="456" />
+      <remoteAddress value="127.0.0.1" />
+      <remotePort value="488" />
+      <layout type="log4net.Layout.PatternLayout, log4net">
+        <conversionPattern value="%d{yyyy-MM-dd HH:mm:ss,fff} %-5level [%c:%line] - %message%newline" />
+      </layout>
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <param name="LevelMin" value="DEBUG" />
+        <param name="LevelMax" value="FATAL" />
+      </filter>
+    </appender>
+    <root>
+      <!--选择哪几种输出方式-->
+      <level value="ALL" />
+      <appender-ref ref="UdpAppender" />
+      <!--UDP输出-->
+      <appender-ref ref="SysAppender" />
+      <!--Txt输出-->
+    </root>
+  </log4net>
 </configuration>
