--- a/Server/WCFServer/LocationWCF/Location.Server.csproj
+++ b/Server/WCFServer/LocationWCF/Location.Server.csproj
@@ -236,6 +236,9 @@
     <Compile Include="Plugins\NVSPlayer\SDK\Class1.cs" />
     <Compile Include="Plugins\NVSPlayer\SDK\CommonStruct.cs" />
     <Compile Include="Plugins\NVSPlayer\SDK\NVSSDK.cs" />
+    <Compile Include="Threads\AlarmRemoveThread.cs" />
+    <Compile Include="Threads\DailyTimerThread.cs" />
+    <Compile Include="Threads\FilterErrorPointThread.cs" />
     <Compile Include="Tools\BaseDataInitializer.cs" />
     <Compile Include="Tools\BaseDataSimulator.cs" />
     <Compile Include="Tools\CameraAlarmListener.cs" />
@@ -2538,6 +2541,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Base\Base.Common\Base.Common.csproj">
+      <Project>{cad48149-6b82-4464-b0aa-7f7229783d7f}</Project>
+      <Name>Base.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\BLL\BLL\BLL.csproj">
       <Project>{c3d77c78-c78f-4e18-8ae1-bb29d3e30a9b}</Project>
       <Name>BLL</Name>
