--- a/DAL/DAL/DAL.csproj
+++ b/DAL/DAL/DAL.csproj
@@ -85,10 +85,13 @@
     <Compile Include="LocationDb.cs" />
     <Compile Include="LocationDbLite.cs" />
     <Compile Include="LocationHistoryDb.cs" />
-    <Compile Include="Log.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Base\Base.Common\Base.Common.csproj">
+      <Project>{cad48149-6b82-4464-b0aa-7f7229783d7f}</Project>
+      <Name>Base.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Model\DbModel\DbModel.csproj">
       <Project>{a72a90c4-c195-49ec-850e-ee6205680256}</Project>
       <Name>DbModel</Name>
