线程无法停止问题

--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -18,9 +18,9 @@
     <!--自动连接定位引擎-->
     <add key="AutoConnectEngine" value="True" />
     <!--本地IP(连接定位引擎) 宝信：192.168.1.100-->
-    <add key="Ip" value="192.168.1.100" />
+    <add key="Ip" value="127.0.0.1" />
     <!--定位引擎IP(连接定位引擎)-->
-    <add key="EngineIp" value="192.168.1.100" />
+    <add key="EngineIp" value="127.0.0.1" />
     <!--三维更新安装包路径-->
     <add key="LocationPackageURL" value="http://192.168.108.109/Exe/LocationSystem.exe" />
     <!--基础平台对接(WebApi)的IP 测试用ipms-demo.datacase.io，正式用172.16.100.22，本地模拟用 simulate -->
@@ -84,14 +84,14 @@
     <!--删除告警时是否保存图片 True:保存图片，恢复时有用 False:彻底删除图片-->
     <add key="DeleteAlarmKeepPictureFile" value="True" />
     <!--NVSPlayer-->
-    <add key="EnabelNVS" value="True" />
+    <add key="EnabelNVS" value="False" />
     <add key="RTMP_Host" value="192.168.108.109" />
     <add key="NVRIP" value="192.168.108.107" />
     <add key="NVRPort" value="3000" />
     <add key="NVRUser" value="Admin" />
     <add key="NVRPass" value="1111add" />
     <!--是否启动守护进程-->
-    <add key="StartDaemon" value="True" />
+    <add key="StartDaemon" value="False" />
     <!--只能有一个守护进程程序-->
     <add key="OnlyOneDaemon" value="True" />
     <!--守护进程程序名-->
