--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -84,14 +84,14 @@
     <!--删除告警时是否保存图片 True:保存图片，恢复时有用 False:彻底删除图片-->
     <add key="DeleteAlarmKeepPictureFile" value="True" />
     <!--NVSPlayer-->
-    <add key="EnabelNVS" value="False" />
+    <add key="EnabelNVS" value="True" />
     <add key="RTMP_Host" value="192.168.108.109" />
     <add key="NVRIP" value="192.168.108.107" />
     <add key="NVRPort" value="3000" />
     <add key="NVRUser" value="Admin" />
     <add key="NVRPass" value="1111add" />
     <!--是否启动守护进程-->
-    <add key="StartDaemon" value="False" />
+    <add key="StartDaemon" value="True" />
     <!--只能有一个守护进程程序-->
     <add key="OnlyOneDaemon" value="True" />
     <!--守护进程程序名-->
@@ -106,7 +106,7 @@
     <!--获取移动巡检数据（用于四会电厂）-->
     <add key="EnableInspectionTrack" value="False" />
     <!--定位历史数据缓存到内存中-->
-    <add key="EnableHistoryBuffer" value="True" />
+    <add key="EnableHistoryBuffer" value="False" />
     <!--线程插入定位数据到历史表中的时间间隔 (s)-->
     <add key="AddHisPositionInterval" value="10" />
     <!--定位引擎发送心跳包的时间间隔 (ms)-->
@@ -121,14 +121,12 @@
     <add key="EnableDevAlarmBuffer" value="True" />
     <!--日志显示最大字符串长度-->
     <add key="LogTextBoxMaxLength" value="10000" />
-    <!--移动的最大速度，超过这个速度，作为错误点,20是2m。0则不排除错误点-->
-    
+    <!--移动的最大速度，超过这个速度，作为错误点。0则不排除错误点-->
     <add key="MoveMaxSpeed" value="20" />
     <!--启动时清理一些当天的数据-->
     <add key="FilterTodayWhenStart" value="True" />
     <!--定时删除超过该速度的（错误）点-->
     <add key="FilterMoreThanMaxSpeedTimer" value="04:00" />
-  
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebLocation-20180528021530.mdf;Initial Catalog=aspnet-WebLocation-20180528021530;Integrated Security=True" providerName="System.Data.SqlClient" />
@@ -254,6 +252,14 @@
   </log4net>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Extensions" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.29.0" newVersion="2.2.29.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.29.0" newVersion="4.2.29.0" />
+      </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http.Extensions" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.2.29.0" newVersion="2.2.29.0" />
