--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -18,9 +18,9 @@
     <!--自动连接定位引擎-->
     <add key="AutoConnectEngine" value="True" />
     <!--本地IP(连接定位引擎) 宝信：192.168.1.100-->
-    <add key="Ip" value="127.0.0.1" />
+    <add key="Ip" value="192.168.1.100" />
     <!--定位引擎IP(连接定位引擎)-->
-    <add key="EngineIp" value="127.0.0.1" />
+    <add key="EngineIp" value="192.168.1.100" />
     <!--三维更新安装包路径-->
     <add key="LocationPackageURL" value="http://192.168.108.109/Exe/LocationSystem.exe" />
     <!--基础平台对接(WebApi)的IP 测试用ipms-demo.datacase.io，正式用172.16.100.22，本地模拟用 simulate -->
@@ -106,7 +106,7 @@
     <!--获取移动巡检数据（用于四会电厂）-->
     <add key="EnableInspectionTrack" value="False" />
     <!--定位历史数据缓存到内存中-->
-    <add key="EnableHistoryBuffer" value="False" />
+    <add key="EnableHistoryBuffer" value="True" />
     <!--线程插入定位数据到历史表中的时间间隔 (s)-->
     <add key="AddHisPositionInterval" value="10" />
     <!--定位引擎发送心跳包的时间间隔 (ms)-->
@@ -252,6 +252,14 @@
   </log4net>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Extensions" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.29.0" newVersion="2.2.29.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.29.0" newVersion="4.2.29.0" />
+      </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http.Extensions" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.2.29.0" newVersion="2.2.29.0" />
